@@ -2,5 +2,8 @@ tinyMCE.addI18n('en.paintweb',{
 	toolbarButton: 'Edit the selected image in PaintWeb',
   overlayButton: 'Edit',
 	contextMenuEdit: 'Edit the image in PaintWeb',
-  loading: 'PaintWeb is loading...'
+  loading: 'PaintWeb is loading...',
+  statusImageEditing: 'You are editing "%file%".',
+  imageSaveButton: 'Save',
+  cancelButton: 'Cancel'
 });
